force-app/main/default/objects/cdcpc__RD_Outlet_Gasket_Part_Number__c/cdcpc__RD_Outlet_Gasket_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RDOutletGasketPartNumber</label>
    <nameField>
        <label>OutletGasketPartNumber</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDOutletGasketPartNumber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>