force-app/main/default/objects/cdcpc__RD_Outlet_Gasket_Part_Number__c/fields/cdcpc__Component_Scrap__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Component_Scrap__c</fullName>
    <label>Component Scrap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>