force-app/main/default/objects/cdcpc__RD_Outlet_Gasket_Part_Number__c/fields/cdcpc__TempUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TempUL__c</fullName>
    <label>TempUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>