force-app/main/default/objects/cdcpc__RD_Outlet_Gasket_Part_Number__c/fields/cdcpc__Thck_Code__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Thck_Code__c</fullName>
    <label>Thck Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>