force-app/main/default/objects/cdcpc__RD_Outlet_Gasket_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Component_Scrap__c</columns>
    <columns>cdcpc__DiscThckUL__c</columns>
    <columns>cdcpc__DiscThckLL__c</columns>
    <columns>cdcpc__MCOG__c</columns>
    <columns>cdcpc__Leadtime__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <columns>cdcpc__OutletGasketPartNumber__c</columns>
    <columns>cdcpc__Part_Seat__c</columns>
    <columns>cdcpc__Part_Code__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__Qty_Per_Assembly__c</columns>
    <columns>cdcpc__Scrap_Factor__c</columns>
    <columns>cdcpc__SourceCode__c</columns>
    <columns>cdcpc__STC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__CDC_Ext_ID__c</field>
        <operation>equals</operation>
        <value>2140</value>
    </filters>
    <label>All</label>
</ListView>